# instaCPR

./: .env  README.md  mainTG.py  mainTUI.py  pyproject.toml  requirements.txt
core/: config.py  driver.py  exceptions.py  logger.py  models.py  platforms.py  queue.py  reporter.py  workflow.py
utils/: authproxy.py  mailgen.py  otp.py  post2user.py  proxycountry.py
utils/actions/facebook/: eights.py  fifth.py  first_action.py  first_submit.py  fourteenth.py  fourth.py  nineth.py  resendotp.py  seventh.py  third_action.py  thirtheenth.py
utils/actions/instagram/: eights.py  elevenths.py  fifteenth.py  fifth.py  first_submit.py  fourth.py  resendotp.py  second_action.py  sixth.py  tenths.py  third_action.py  twelth.py
